# 24h

./: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  configure~
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
src/: 42sh.c  Makefile  Makefile.am  Makefile.in  test1.sh
src/.deps/: 42sh-42sh.Po
src/ast/: Makefile.am  ast.h  build_graphivz.c  build_graphivz.h  cd.c  cd.h  expand.c  expand_function.c  free.c  free2.c  init.c  init2.c  main.c  pretty_print.c  pretty_print2.c  push.c  push2.c  run.c  run2.c
src/exec_ast/: Makefile.am  Makefile.in  exec.c  exec.h
src/expand/: Makefile.am  expand.c  expand.h  expand_arithmetic.c  expand_cmd_sub.c  expand_field_splitting.c  expand_function.c  expand_quotes.c  expand_variables.c
src/expand/eval/: evalexpr.c  evalexpr.h  fifo_access.c  fifo_setup_destroy.c  lexing.c  my_atoi.c  rpn.c  stack.c  step2.c
src/hash_map/: Makefile.am  hash.c  hash_map.c  hash_map.h
src/lexer/: Makefile  Makefile.am  Makefile.in  lexer.c  lexer.h  main.c  mbt_str.c  next_token.c  print.c  rw_token.c  test.c  test_operators.c  test_reserved_words.c  token.c  token.h  token_reco.c
src/lexer/.deps/: liblexer_a-print.Po  liblexer_a-test_reserved_words.Po
src/lexer/save/: lexer.h  next_token.c
src/lexer/save/lexer/.deps/: liblexer_a-lexer.Po  liblexer_a-mbt_str.Po  liblexer_a-next_token.Po  liblexer_a-test_operators.Po  liblexer_a-test_reserved_words.Po
src/lexer/save/lexer/save/: Makefile.am
src/lexer/save/save2/: next_token.c  test_operators.c
src/parser/: Makefile  Makefile.am  Makefile.in  ast.c  ast.h  expand.c  extand.c  free.c  free2.c  function_parser.c  init.c  main.c  parser.c  parser.h  pretty_print.c  push.c  run.c
src/parser/.deps/: libparser_a-free.Po  libparser_a-init.Po  libparser_a-parser.Po  libparser_a-pretty_print.Po  libparser_a-run.Po
src/parser/hash_map/: a.out  hash.c  hash_map.c  hash_map.h  hash_map_print.c  main  main.c
src/parser/hash_map/.deps/: libparser_a-hash.Po  libparser_a-hash_map.Po  libparser_a-hash_map_print.Po
tests/: Makefile.am  Makefile.in  ex.txt  export2.sh  get.txt  if_var_1.sh  inc.sh  test.txt  tests.sh  var_6.sh  var_7.sh
tests/builtins/: a3.sh  alias_unalias.sh  bash_slash_newline.sh  cd.sh  cd2.sh  cd3.sh  cd4.sh  echo1.sh  echo11.sh  echo2.sh  echo22.sh  echo33.sh  echo_combo.sh  echo_dollooor.sh  echo_empty.sh  echo_quote.sh  exit.sh  exit2.sh  function.sh  function1.sh  function3.sh  script.sh  substi.sh  tabtoto.sh  test_break.sh  test_continue.sh  test_echo_rw.sh  unset1.sh  unset2.sh  unset3.sh  unset_4.sh  unset__.sh  unset_exit.sh  unset_exit2.sh  unset_exit3.sh  unset_exit4.sh  unset_exit5.sh  unset_exit6.sh  unset_exit7.sh  unset_variable.sh  (+1 more)
tests/builtins/debug/: echo3.sh
tests/current_debug/: bad_var.sh  bad_var2.sh  debug_espace_echo.sh  escape_dollar.sh  escape_dollar1.sh  escape_dollar2.sh  escape_dollar3.sh  escape_dollar4.sh  escape_dollar5.sh  escape_dollar6.sh  escape_dollar7.sh  escape_dollar8.sh  expand_quote.sh  expand_quote2.sh  expand_quote3.sh  many_varsmouli.sh  not_existantsimplecommand.sh  quote_very_special1.sh  quote_very_special2.sh  quote_very_special4.sh  quote_very_special5.sh  var.sh  var_debug.sh  var_debug2.sh  var_hard3.sh  var_quotedebug.sh  var_quotedebug2.sh  var_recu.sh
tests/current_debug/apres/: while.sh
tests/double_quotes/: dq.sh
tests/for/: bas_for.sh  basfor2.sh  for.sh
tests/if_commands/: a1.sh  a2.sh  a22.sh  a3.sh  a4.sh  a44.sh  a5.sh  a55.sh  coumpoundlist2.sh  test_else.sh  test_if_elif.sh  test_if_elif_var.sh
tests/operators/: OR.sh  a1.sh  a2.sh  a3.sh  a5.sh  a6.sh  and.sh  negation.sh  pipeline.sh
tests/pretty_print/: test.sh
tests/quotes/: a4.sh  a5.sh  all_quote.sh  back_slash_quoteee1.sh  backslashword.sh  basic_quote1.sh  co.sh  co2.sh  com_quote.sh  comments.sh  dollar_quote4mouli.sh  eE.sh  embedded_quote_2.sh  empty_quotes.sh  escape2.sh  escape3.sh  escape_commentmouli.sh  escape_dollar_test.sh  escape_double_quote.sh  escape_double_quote2.sh  escape_in_week.sh  escape_new_line_quoi.sh  escape_newline.sh  escape_newline_without_quote.sh  escapedollar11.sh  escapemouli1.sh  hard_quotemouli.sh  hard_quotemouli2.sh  j1.sh  jbizarre.sh  quote.sh  quoteemb_1.sh  quotes_in_quotes.sh  semiingargs.sh  special_quote_1.sh  ta_ta.sh  test_newline.sh  test_newline2.sh  test_newline22.sh  test_newline4.sh  (+8 more)
tests/quotes/debug/: j2.sh
tests/simple_commands/: simple.sh
tests/test_script/: script.sh  test.sh  var2.sh  var3.sh  var4.sh  var_count.sh  var_date.sh  var_recu.sh  var_today_is_today.sh
tests/tests_1/: a1.sh  a3.sh  for.sh  var.sh  var2.sh
tests/tests_basic/: exit.sh
tests/tests_debug/: a2.sh  a3.sh  ascii_house.sh
tests/tests_facile/: a2.sh  a3.sh
tests/tests_var/: var_3.sh  var_word_test.sh  var_word_test2.sh
tests/variables/: alias.sh  alias_test.sh  ariiiiii.sh  arith.sh  arith22.sh  basvar2.sh  child_script.sh  dvar_3.sh  export1.sh  export2.sh  export3.sh  export4.sh  good_toto.sh  j3.sh  multiple_variables.sh  petitapetit.sh  random.sh  special.sh  sub.sh  sub1.sh  sub2.sh  sub3.sh  sub4.sh  sub5.sh  sub6.sh  subbb.sh  substi.sh  substi2.sh  test.sh  test_arith.sh  test_arith2.sh  test_arith3.sh  testifs1.sh  var_2.sh  var_3.sh  var_4.sh  var_5.sh  var_basic_s1.sh  var_basic_s2.sh  var_basic_s3.sh  (+23 more)
tests/variables/coverage/: export7.sh  special.sh  var_8.sh
tests/variables/debug/: var_7.sh  var_9.sh
tests/variables/export/: export1.sh  export11.sh  export2.sh  export3.sh  export4.sh  export5.sh  export6.sh  export_bizarre.sh  (+3 more)
(+2 files in other folders)
