# lib name
lib_LIBRARIES = libhash_map.a

# source files for liblexer
libhash_map_a_SOURCES = hash.c hash_map.c hash_map.h

# flags needed for the liblexer
libhash_map_a_CPPFLAGS = -I$(top_srcdir)/src

libhash_map_a_CFLAGS = -std=c99 -Werror -Wall -Wextra -Wvla -pedantic

noinst_LIBRARIES = libhash_map.a
